<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/syllabus_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.SyllabusCategory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/green_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backArrow"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/practise_question"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/backArrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/backArrow"
            app:layout_constraintTop_toTopOf="@+id/backArrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/category_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:scrollbars="none"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/english"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/mathematics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/mathematics"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chemistry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/chemistry"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/physics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/physics"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/biology"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/biology"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goverment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/government"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/literature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/literature_in_english"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/crs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/christian_religious_study"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/irs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/islamic_religious_study"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/economics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/economics"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />

            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/commerce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/commerce"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_background"
                    android:padding="10dp"
                    android:text="@string/account"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/arial" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/green_text" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.gms.ads.AdView

            android:id="@+id/banner_AdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:adSize="BANNER"
            app:adUnitId="@string/admob_banner_id" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>